k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talent-forge
spec:
  selector:
    app: talent-forge
  ports:
    - port: 80
      targetPort: 80
